Squashing the bugs with scrolling and under/overflow
Squashing the bugs with scrolling overflow

--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -84,7 +84,7 @@ html, body {
 
 
 	
-	overflow: scroll;
+	overflow: auto !important;
 	-webkit-overflow-scrolling: touch;
 
 
